--- a/app/package.json
+++ b/app/package.json
@@ -14,10 +14,12 @@
     "mysql2": "^3.12.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
+    "sweetalert2": "^11.16.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
