--- a/app/package.json
+++ b/app/package.json
@@ -19,6 +19,7 @@
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
+    "sweetalert2": "^11.16.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
