--- a/app/package.json
+++ b/app/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.7.9",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "express": "^4.21.2",
     "jsqr": "^1.4.0",
     "mysql2": "^3.12.0",
     "react": "^19.0.0",
